# SFML_Pong

./: .editorconfig  .gitignore  CMakeLists.txt
scr/: main.cpp  pang.cpp  pang.h
scr/objects/: visible_object.cpp  visible_object.h
scr/states/: game_state.cpp  game_state.h  menu_state.cpp  menu_state.h  playing_state.cpp  playing_state.h  splashscreen_state.cpp  splashscreen_state.h
